<resources>
    <string name="app_name">Firedroid Pager</string>
    <string name="menu_settings">Settings</string>
    <string name="hazmat_info">Hazmat DB</string>
    <string name="app_info">About</string>
    <string name="settings_info">Modify application settings below.</string>
    <string name="keyword_alert">Alert Keyword 1</string>
    <string name="keyword_alert2">Alert Keyword 2</string>
    <string name="disable_app">Disable SMS Alerting</string>
    <string name="change_audiotv">Change Alert Audio</string>
    <string name="about_pagerversion">Firedroid Pager v1.00</string>
    <string name="about_author">By James Hemmings</string>
    <string name="about_copyright">© Copyright James Hemmings 2017</string>
    <string name="emergency_call">!! Emergency !! - 911 Call</string>
    <string name="firetruck_txtdesc">Firetruck Image</string>
    <string name="button_hazsearchtxt">Search</string>
    <string name="button_clearalertstxt">Clear Alerts</string>
    <string name="edit_hazmatsearchhint">Enter Chemical or UN ID.</string>
    <string name="button_savesettingstxt">Save</string>
    <string name="editText_keywordhint">Enter keyword.</string>
    <string name="textView_vibratetxt">Enable Vibration</string>
    <string name="button_setaudiotxt">SET AUDIO</string>
    <string name="editText_keyword2hint">Enter keyword.</string>
    <string name="button_dismisstxt">DISMISS ALERT</string>
    <string name="tv_alerttxt">STILL F STANDBY 950 MILLIONAIRES LN OLY Apt:  Cross Streets : HILLSIDE AVE * FOX HOLLOW RD   http://maps.google.com/maps?q=+41.24483%20-77.07871  *FIRE-14 8002916142</string>
    <string name="audiofile1">Cad Page</string>
    <string name="audiofile2">Monty ALS</string>
    <string name="audiofile3">NZ Callout</string>
    <string name="audiofile4">Station Buzz</string>
    <string name="settingsdialog_header">Select SMS Alert Tone</string>
</resources>
