<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView_audiosettv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.08"
        android:gravity="center"
        android:text="@string/settingsdialog_header"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/audio_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:gravity="center">

        <RadioButton
            android:id="@+id/radioButton_selectaudio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/audiofile1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_selectaudio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/audiofile2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_selectaudio3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/audiofile3"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioButton_selectaudio4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onRadioButtonClicked"
            android:text="@string/audiofile4"
            android:textSize="18sp" />
    </RadioGroup>

</LinearLayout>