<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uk.ac.abertay.firedroidpager.AboutActivity">

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/about_copyright"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvabout_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/tv_byauthor"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="18dp"
        android:text="@string/about_pagerversion"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_byauthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_copyright"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:text="@string/about_author"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/firetruck_txtdesc"
        app:srcCompat="@drawable/firetruck" />
</RelativeLayout>
