<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/tv_alertinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/emergency_call"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        tools:shadowColor="@android:color/background_dark" />

    <TextView
        android:id="@+id/tv_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_alerttxt"
        android:textSize="18sp" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.87" />

    <Button
        android:id="@+id/button_dismiss"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_weight="0.04"
        android:text="@string/button_dismisstxt" />

</LinearLayout>